[gd_scene load_steps=17 format=2]

[ext_resource path="res://Weapons/Explosion.gd" type="Script" id=1]
[ext_resource path="res://Assets/weapons/Classic Explosion/explosion_classic1.png" type="Texture" id=2]
[ext_resource path="res://Assets/weapons/Classic Explosion/explosion_classic2.png" type="Texture" id=3]
[ext_resource path="res://Assets/weapons/Classic Explosion/explosion_classic3.png" type="Texture" id=4]
[ext_resource path="res://Assets/weapons/Classic Explosion/explosion_classic4.png" type="Texture" id=5]
[ext_resource path="res://Assets/weapons/Classic Explosion/explosion_classic5.png" type="Texture" id=6]
[ext_resource path="res://Assets/weapons/Classic Explosion/explosion_classic6.png" type="Texture" id=7]
[ext_resource path="res://Assets/weapons/Classic Explosion/explosion_classic7.png" type="Texture" id=8]
[ext_resource path="res://Assets/weapons/Classic Explosion/explosion_classic8.png" type="Texture" id=9]
[ext_resource path="res://Assets/weapons/Classic Explosion/explosion_classic9.png" type="Texture" id=10]
[ext_resource path="res://Assets/weapons/Classic Explosion/explosion_classic10.png" type="Texture" id=11]
[ext_resource path="res://Assets/weapons/Classic Explosion/explosion_classic11.png" type="Texture" id=12]
[ext_resource path="res://Assets/weapons/Classic Explosion/explosion_classic12.png" type="Texture" id=13]
[ext_resource path="res://Assets/weapons/boom.wav" type="AudioStream" id=14]

[sub_resource type="CircleShape2D" id=1]
radius = 20.8255

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 16.0
} ]

[node name="ClassicExplosion" type="Area2D"]
scale = Vector2( 2, 2 )
gravity = 0.0
script = ExtResource( 1 )

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplosionAnimation" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
autoplay = true
[connection signal="body_entered" from="." to="." method="_on_Explosion_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
